<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2009 The Android Open Source Project
          http://www.apache.org/licenses/LICENSE-2.0
-->
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp" >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dip">
 
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/app_descrip"
        android:textColor="?android:attr/textColorPrimary" />
 
    <TextView
        android:id="@+id/about_credits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:textSize="22sp"
        android:text="@string/app_credits"
       
        android:textColor="@color/holoBlue" />
    
     <TextView
        android:id="@+id/about_legal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dip"
        android:textSize="16sp"
        android:text="@string/licence"
        android:autoLink="web"
        android:textColor="?android:attr/textColorPrimary" />
 
</LinearLayout>
</ScrollView>